@@ -1,18 +1,30 @@
 package com.sun.jersey.test.framework.impl.container.inmemory;
 
+import javax.ws.rs.GET;
+import javax.ws.rs.Path;
+
+import org.junit.Assert;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+
 import com.sun.jersey.api.client.WebResource;
+import com.sun.jersey.api.core.DefaultResourceConfig;
+import com.sun.jersey.api.core.ResourceConfig;
+import com.sun.jersey.spi.container.ContainerRequest;
+import com.sun.jersey.spi.container.ContainerRequestFilter;
+import com.sun.jersey.spi.container.ContainerResponse;
+import com.sun.jersey.spi.container.ContainerResponseFilter;
+import com.sun.jersey.test.framework.AppDescriptor;
 import com.sun.jersey.test.framework.JerseyTest;
 import com.sun.jersey.test.framework.LowLevelAppDescriptor;
 import com.sun.jersey.test.framework.spi.container.TestContainerFactory;
 import com.sun.jersey.test.framework.spi.container.inmemory.InMemoryTestContainerFactory;
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import org.junit.Assert;
-import org.junit.Test;
 
 /**
  *
- * @author paulsandoz
+ * @author Paul Sandoz (paul.sandoz at oracle.com)
  */
 public class InMemoryClassesTest extends JerseyTest {
 
@@ -35,10 +47,38 @@ public class InMemoryClassesTest extends JerseyTest {
         }
     }
 
-    public InMemoryClassesTest() {
-        super(new LowLevelAppDescriptor.Builder(TestResource.class).
+    public static class MyFilter implements ContainerRequestFilter, ContainerResponseFilter {
+        public boolean requestFilterCalled = false;
+        public boolean responseFilterCalled = false;
+
+        @Override
+        public ContainerRequest filter(ContainerRequest request) {
+            requestFilterCalled = true;
+            return request;
+        }
+
+        @Override
+        public ContainerResponse filter(ContainerRequest request, ContainerResponse response) {
+            responseFilterCalled = true;
+            return response;
+        }
+    }
+
+    static MyFilter myFilter;
+
+
+    @Override
+    protected AppDescriptor configure() {
+        myFilter = new MyFilter();
+
+        ResourceConfig rc = new DefaultResourceConfig();
+        rc.getClasses().add(TestResource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS, myFilter);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_RESPONSE_FILTERS, myFilter);
+
+        return new LowLevelAppDescriptor.Builder(rc).
                 contextPath("context").
-                build());        
+                build();
     }
 
     @Test
@@ -46,7 +86,10 @@ public class InMemoryClassesTest extends JerseyTest {
         WebResource r = resource().path("root");
 
         String s = r.get(String.class);
-        Assert.assertEquals("GET", s);
+        assertEquals("GET", s);
+
+        assertTrue(myFilter.requestFilterCalled);
+        assertTrue(myFilter.responseFilterCalled);
     }
 
     @Test
