@@ -1,4 +1,7 @@
 release 1.14
+- Fixed issue JERSEY-1392
+  http://java.net/jira/browse/JERSEY-1392
+  Jersey Inmemory container rewrites Container Request/Response Filters
 - Fixed issue JERSEY-1197
   http://java.net/jira/browse/JERSEY-1197
   Jersey Test Framework constructor fails when given multiple packages
